syntax="proto3";
package Diadoc.Proto;

message AsyncMethodResult {
	 string TaskId = 1;
}