syntax="proto3";
// forwarded documents api
// ForwardDocument(boxId, ForwardDocumentRequest) : void
// GetForwardedDocuments(boxId, GetForwardedDocumentsRequest) : GetForwardedDocumentsResponse
// GetForwardedDocumentEvents(boxId, GetForwardedDocumentEventsRequest) : GetForwardedDocumentEventsResponse

import "Timestamp.proto";
import "DocumentId.proto";
import "TimeBasedFilter.proto";
import "Forwarding/ForwardedDocument.proto";

package Diadoc.Proto.Forwarding;

message ForwardDocumentRequest
{
	 string ToBoxId = 1;
	 DocumentId DocumentId = 2;
}

message ForwardDocumentResponse
{
	 Timestamp ForwardTimestamp = 1;
	 ForwardedDocumentId ForwardedDocumentId = 2;
}

message GetForwardedDocumentsRequest
{
	repeated ForwardedDocumentId ForwardedDocumentIds = 1;
	 bool InjectEntityContent = 2;
}

message GetForwardedDocumentsResponse
{
	repeated ForwardedDocument ForwardedDocuments = 1;
}

message GetForwardedDocumentEventsRequest
{
	 TimeBasedFilter Filter = 1;
	 bytes AfterIndexKey = 2;
	 bool PopulateForwardedDocuments = 3;
	 bool InjectEntityContent = 4;
}

message GetForwardedDocumentEventsResponse
{
	 int32 TotalCount = 1;
	repeated ForwardedDocumentEvent Events = 2;
}

message ForwardedDocumentEvent
{
	 Timestamp Timestamp = 1;
	 ForwardedDocumentId ForwardedDocumentId = 2;
	 bytes IndexKey = 3;
	 ForwardedDocument ForwardedDocument = 4;
}
